// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses with mulitiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $12,460.25
  </h1>
</div>
`;

exports[`should render expenses with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $60.45
  </h1>
</div>
`;
